--- a/index.html
+++ b/index.html
@@ -57,8 +57,16 @@
     <h3>We're here for you</h3>
     <a href="#" class="get_in_touch"> Get in touch</a>
   </div>
-  
+
 </section>
+
+  <section>
+    <div class="container">
+      <h2></h2>
+      <h3></h3>
+      <a href="#"></a>
+    </div>
+  </section>
 </main>
 
 </body>
