--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
 </main>
 
 <footer>
-  <div class="list"></div>
+  <div class="list">
+    <ul>
+      <li>
+        <a href="#"></a>
+      </li>
+    </ul>
+  </div>
 </footer>
 </body>
 </html>
