--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
 
 </section>
 
+  <section class="information_block">
+    <article>
+      <h3>Sunset at Mount Fuji</h3>
+      <p> Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.</p>
+    </article>
+  </section>
+
   <section>
     <div class="container">
       <h2></h2>
