--- a/index.html
+++ b/index.html
@@ -67,12 +67,18 @@
     </article>
   </section>
 
-  <section>
-    <div class="container">
-      <h2></h2>
-      <h3></h3>
-      <a href="#"></a>
-    </div>
+  <section class="information_block1">
+    <article>
+      <h3>Monstera Leafs</h3>
+      <p> Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+    </article>
+  </section>
+
+  <section class="information_block2">
+    <article>
+      <h3>Star fall in the Himalayas</h3>
+      <p> Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.</p>
+    </article>
   </section>
 </main>
 
