--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
+
 </head>
 <body>
 
@@ -17,7 +19,6 @@
     <a href="#" class="logo">
       <img src="images/logo.svg" alt="logo">
     </a>
-
     <nav>
       <ul>
         <li>
@@ -86,7 +87,7 @@
               <img src="images/what_3.jpg" alt="img">
           </article>
           <article>
-            <div class="description d-flex">
+            <div class="description">
               <h5>Wildlife Photography</h5>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros <br> quis consectetur. Morbi neque ex, condimentum dapibus congue et, <br> vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
               <a href="#" class="read_more">Read more</a>
@@ -95,17 +96,6 @@
           </article>
       </div>
   </div>
-</section>
-
-
-<section class="secondary_banner">
-  <div class="container">
-    <h2>Need help with photography <br>
-      or videography? </h2>
-    <h3>We're here for you</h3>
-    <a href="#" class="get_in_touch"> Get in touch</a>
-  </div>
-
 </section>
 
   <section class="information_block">
@@ -134,6 +124,30 @@
     </ul>
   </section>
 
+  <section class="past_clients">
+    <div class="container">
+      <h2>Past clients</h2>
+      <h4>Trusted by your favourite companies</h4>
+          <div class="d-flex">
+            <a href="https://www.instagram.com/highhill.coffee.cafe/" target="_blank">
+            <img src="images/Logo-Group-1.png" alt="Logo-Group-1">
+            </a>
+            <a href="https://riksgransen.se/en/" target="_blank">
+            <img src="images/Logo-Group-2.png" alt="Logo-Group-2">
+            </a>
+            <a href="https://caiguoqiang.com/studio/" target="_blank">
+            <img src="images/Logo-Group-3.png" alt="Logo-Group-3">
+            </a>
+            <a href="https://chilldindustries.com.au/" target="_blank">
+            <img src="images/Logo-Group-4.png" alt="Logo-Group-4">
+            </a>
+            <a href="https://www.stockholm.com/en" target="_blank">
+            <img src="images/Logo-Group-5.png" alt="Logo-Group-5">
+            </a>
+          </div>
+    </div>
+  </section>
+
   <section class="information_block2">
     <article>
       <h3>Star fall in the Himalayas</h3>
@@ -145,6 +159,15 @@
       <li>100</li>
       <li>Iceland</li>
     </ul>
+  </section>
+
+  <section class="secondary_banner">
+    <div class="container">
+      <h2>Need help with photography <br>
+        or videography? </h2>
+      <h3>We're here for you</h3>
+      <a href="#" class="get_in_touch"> Get in touch</a>
+    </div>
   </section>
 </main>
 
