--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Aperture</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/normalize.css">
+
+
+  <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/owl.theme.default.css">
+
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
+
+
 
 </head>
 <body>
@@ -128,7 +134,7 @@
     <div class="container">
       <h2>Past clients</h2>
       <h4>Trusted by your favourite companies</h4>
-          <div class="d-flex">
+          <div class="d-flex owl-carousel">
             <a href="https://www.instagram.com/highhill.coffee.cafe/" target="_blank">
             <img src="images/Logo-Group-1.png" alt="Logo-Group-1">
             </a>
@@ -144,7 +150,24 @@
             <a href="https://www.stockholm.com/en" target="_blank">
             <img src="images/Logo-Group-5.png" alt="Logo-Group-5">
             </a>
+
+              <a href="https://www.instagram.com/highhill.coffee.cafe/" target="_blank">
+                  <img src="images/Logo-Group-1.png" alt="Logo-Group-1">
+              </a>
+              <a href="https://riksgransen.se/en/" target="_blank">
+                  <img src="images/Logo-Group-2.png" alt="Logo-Group-2">
+              </a>
+              <a href="https://caiguoqiang.com/studio/" target="_blank">
+                  <img src="images/Logo-Group-3.png" alt="Logo-Group-3">
+              </a>
+              <a href="https://chilldindustries.com.au/" target="_blank">
+                  <img src="images/Logo-Group-4.png" alt="Logo-Group-4">
+              </a>
+              <a href="https://www.stockholm.com/en" target="_blank">
+                  <img src="images/Logo-Group-5.png" alt="Logo-Group-5">
+              </a>
           </div>
+
     </div>
   </section>
 
@@ -171,6 +194,13 @@
   </section>
 </main>
 
+
+<script
+        src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+        crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/scripts.js"></script>
 
 </body>
 </html>
